[build-system]
requires = [
    "scikit-build-core>=0.12",
    "nanobind>=2.12",
    "pyarrow>=24,<25",
]
build-backend = "scikit_build_core.build"

[project]
name = "hg_cpp"
version = "0.4.0rc1"
description = "Release candidate for the C++ first hgraph runtime and Python compatibility bridge"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Howard Henson", email = "howard@henson.me.uk"},
]
keywords = [
    "reactive",
    "graph",
    "forward propagating graph",
    "time series",
    "functional reactive programming",
    "c++",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "frozendict>=2.4",
    "numpy>=2.0",
    "pyarrow>=24,<25",
]

[project.optional-dependencies]
python = [
    "nanobind>=2.12",
]
test = [
    "packaging>=24",
    "polars[rtcompat]>=1.32",
    "pytest>=8",
    "tornado>=6.5",
    "trove-classifiers",
]
web = [
    "tornado>=6.5",
]
sql = [
    "duckdb>=1.4",
    "sqlalchemy>=2.0",
]
snowflake = [
    "adbc-driver-snowflake>=1.8",
]
kafka = [
    "kafka-python>=2.2",
]
delta = [
    "deltalake>=1.0",
]
perspective = [
    "perspective-python>=3.8",
    "tornado>=6.5",
]
dataframe = [
    "polars>=1.32",
]
docs = [
    "sphinx>=7.4",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinxcontrib-mermaid>=1.0",
]
dev = [
    "cmake>=3.26",
    "ninja",
    "nanobind>=2.12",
    "packaging>=24",
    "pytest>=8",
    "sphinx>=7.4",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinxcontrib-mermaid>=1.0",
    "scikit-build-core>=0.12",
    "trove-classifiers",
]

[project.urls]
Homepage = "https://github.com/hhenson/hg_cpp"
Repository = "https://github.com/hhenson/hg_cpp.git"

[tool.scikit-build]
build.verbose = true
cmake.source-dir = "."
minimum-version = "build-system.requires"
wheel.py-api = "cp312"
wheel.packages = ["python/hgraph"]
sdist.exclude = [
    "reports/**",
    "ext/**",
    "benchmarks/.venv*/**",
    "benchmarks/results/**",
]

[tool.scikit-build.cmake.define]
HGRAPH_BUILD_PYTHON_BINDINGS = "ON"
HGRAPH_ENABLE_PYTHON_USER_NODES = "ON"
HGRAPH_BUILD_SHARED = "ON"
BUILD_TESTING = "OFF"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "python/tests",
]
